compiler/sintactico.output
Grammar

    0 $accept: program $end

    1 program: ID LPAREN RPAREN LCORCHETE declarations statement_list RCORCHETE

    2 declarations: declarations VAR identifier_list SEMICOLON
    3             | declarations CONST error SEMICOLON
    4             | declarations VAR error SEMICOLON
    5             | declarations CONST identifier_list SEMICOLON
    6             | ε

    7 identifier_list: identifier
    8                | identifier_list COMMA identifier

    9 identifier: ID
   10           | ID ASSIGNOP expression

   11 statement_list: statement_list statement
   12               | ε

   13 statement: ID ASSIGNOP expression SEMICOLON
   14          | LCORCHETE statement_list RCORCHETE
   15          | IF LPAREN expression RPAREN statement
   16          | IF LPAREN expression RPAREN statement ELSE statement
   17          | WHILE LPAREN expression RPAREN statement
   18          | DO statement WHILE LPAREN expression RPAREN
   19          | PRINT LPAREN print_list RPAREN SEMICOLON
   20          | RETURN expression SEMICOLON
   21          | ID ASSIGNOP error
   22          | PRINT error SEMICOLON
   23          | PRINT LPAREN print_list RPAREN error
   24          | PRINT LPAREN error RPAREN SEMICOLON
   25          | READ error SEMICOLON
   26          | READ LPAREN read_list RPAREN error
   27          | READ LPAREN error RPAREN SEMICOLON
   28          | WHILE LPAREN error RPAREN
   29          | WHILE error SEMICOLON
   30          | DO statement WHILE LPAREN error RPAREN
   31          | IF LPAREN error RPAREN
   32          | IF error SEMICOLON
   33          | RETURN error
   34          | error SEMICOLON
   35          | READ LPAREN read_list RPAREN SEMICOLON

   36 print_list: print_item
   37           | print_list COMMA print_item

   38 print_item: expression
   39           | STRING

   40 read_list: ID
   41          | read_list COMMA ID

   42 expression: expression PLUSOP expression
   43           | expression MINUSOP expression
   44           | expression MULTOP expression
   45           | expression DIVOP expression
   46           | expression LTOP expression
   47           | expression GTOP expression
   48           | expression GTEOP expression
   49           | expression LTEOP expression
   50           | expression EQOP expression
   51           | expression NOTEQOP expression
   52           | expression AND expression
   53           | expression OR expression
   54           | UNOT expression
   55           | MINUSOP expression
   56           | LPAREN expression RPAREN
   57           | ID
   58           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 4 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    PRINT (258) 19 22 23 24
    VAR (259) 2 4
    READ (260) 25 26 27 35
    SEMICOLON (261) 2 3 4 5 13 19 20 22 24 25 27 29 32 34 35
    COMMA (262) 8 37 41
    WHILE (263) 17 18 28 29 30
    CONST (264) 3 5
    LCORCHETE (265) 1 14
    RCORCHETE (266) 1 14
    LPAREN (267) 1 15 16 17 18 19 23 24 26 27 28 30 31 35 56
    RPAREN (268) 1 15 16 17 18 19 23 24 26 27 28 30 31 35 56
    IF (269) 15 16 31 32
    DO (270) 18 30
    RETURN (271) 20 33
    NUM <intValue> (272) 58
    ID <string> (273) 1 9 10 13 21 40 41 57
    STRING <string> (274) 39
    ASSIGNOP (275) 10 13 21
    OR (276) 53
    AND (277) 52
    UNOT (278) 54
    GTOP (279) 47
    LTOP (280) 46
    GTEOP (281) 48
    LTEOP (282) 49
    EQOP (283) 50
    NOTEQOP (284) 51
    PLUSOP (285) 42
    MINUSOP (286) 43 55
    MULTOP (287) 44
    DIVOP (288) 45
    UMINUS (289)
    NOT_ELSE (290)
    ELSE (291) 16


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    program <codigo> (38)
        on left: 1
        on right: 0
    declarations <codigo> (39)
        on left: 2 3 4 5 6
        on right: 1 2 3 4 5
    identifier_list <codigo> (40)
        on left: 7 8
        on right: 2 5 8
    identifier <codigo> (41)
        on left: 9 10
        on right: 7 8
    statement_list <codigo> (42)
        on left: 11 12
        on right: 1 11 14
    statement <codigo> (43)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 11 15 16 17 18 30
    print_list <codigo> (44)
        on left: 36 37
        on right: 19 23 37
    print_item <codigo> (45)
        on left: 38 39
        on right: 36 37
    read_list <codigo> (46)
        on left: 40 41
        on right: 26 35 41
    expression <codigo> (47)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 10 13 15 16 17 18 20 38 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56


State 0

    0 $accept: • program $end

    ID  shift, and go to state 1

    program  go to state 2


State 1

    1 program: ID • LPAREN RPAREN LCORCHETE declarations statement_list RCORCHETE

    LPAREN  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: ID LPAREN • RPAREN LCORCHETE declarations statement_list RCORCHETE

    RPAREN  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: ID LPAREN RPAREN • LCORCHETE declarations statement_list RCORCHETE

    LCORCHETE  shift, and go to state 6


State 6

    1 program: ID LPAREN RPAREN LCORCHETE • declarations statement_list RCORCHETE

    $default  reduce using rule 6 (declarations)

    declarations  go to state 7


State 7

    1 program: ID LPAREN RPAREN LCORCHETE declarations • statement_list RCORCHETE
    2 declarations: declarations • VAR identifier_list SEMICOLON
    3             | declarations • CONST error SEMICOLON
    4             | declarations • VAR error SEMICOLON
    5             | declarations • CONST identifier_list SEMICOLON

    VAR    shift, and go to state 8
    CONST  shift, and go to state 9

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 10


State 8

    2 declarations: declarations VAR • identifier_list SEMICOLON
    4             | declarations VAR • error SEMICOLON

    error  shift, and go to state 11
    ID     shift, and go to state 12

    identifier_list  go to state 13
    identifier       go to state 14


State 9

    3 declarations: declarations CONST • error SEMICOLON
    5             | declarations CONST • identifier_list SEMICOLON

    error  shift, and go to state 15
    ID     shift, and go to state 12

    identifier_list  go to state 16
    identifier       go to state 14


State 10

    1 program: ID LPAREN RPAREN LCORCHETE declarations statement_list • RCORCHETE
   11 statement_list: statement_list • statement

    error      shift, and go to state 17
    PRINT      shift, and go to state 18
    READ       shift, and go to state 19
    WHILE      shift, and go to state 20
    LCORCHETE  shift, and go to state 21
    RCORCHETE  shift, and go to state 22
    IF         shift, and go to state 23
    DO         shift, and go to state 24
    RETURN     shift, and go to state 25
    ID         shift, and go to state 26

    statement  go to state 27


State 11

    4 declarations: declarations VAR error • SEMICOLON

    SEMICOLON  shift, and go to state 28


State 12

    9 identifier: ID •
   10           | ID • ASSIGNOP expression

    ASSIGNOP  shift, and go to state 29

    $default  reduce using rule 9 (identifier)


State 13

    2 declarations: declarations VAR identifier_list • SEMICOLON
    8 identifier_list: identifier_list • COMMA identifier

    SEMICOLON  shift, and go to state 30
    COMMA      shift, and go to state 31


State 14

    7 identifier_list: identifier •

    $default  reduce using rule 7 (identifier_list)


State 15

    3 declarations: declarations CONST error • SEMICOLON

    SEMICOLON  shift, and go to state 32


State 16

    5 declarations: declarations CONST identifier_list • SEMICOLON
    8 identifier_list: identifier_list • COMMA identifier

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 31


State 17

   34 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 34


State 18

   19 statement: PRINT • LPAREN print_list RPAREN SEMICOLON
   22          | PRINT • error SEMICOLON
   23          | PRINT • LPAREN print_list RPAREN error
   24          | PRINT • LPAREN error RPAREN SEMICOLON

    error   shift, and go to state 35
    LPAREN  shift, and go to state 36


State 19

   25 statement: READ • error SEMICOLON
   26          | READ • LPAREN read_list RPAREN error
   27          | READ • LPAREN error RPAREN SEMICOLON
   35          | READ • LPAREN read_list RPAREN SEMICOLON

    error   shift, and go to state 37
    LPAREN  shift, and go to state 38


State 20

   17 statement: WHILE • LPAREN expression RPAREN statement
   28          | WHILE • LPAREN error RPAREN
   29          | WHILE • error SEMICOLON

    error   shift, and go to state 39
    LPAREN  shift, and go to state 40


State 21

   14 statement: LCORCHETE • statement_list RCORCHETE

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 41


State 22

    1 program: ID LPAREN RPAREN LCORCHETE declarations statement_list RCORCHETE •

    $default  reduce using rule 1 (program)


State 23

   15 statement: IF • LPAREN expression RPAREN statement
   16          | IF • LPAREN expression RPAREN statement ELSE statement
   31          | IF • LPAREN error RPAREN
   32          | IF • error SEMICOLON

    error   shift, and go to state 42
    LPAREN  shift, and go to state 43


State 24

   18 statement: DO • statement WHILE LPAREN expression RPAREN
   30          | DO • statement WHILE LPAREN error RPAREN

    error      shift, and go to state 17
    PRINT      shift, and go to state 18
    READ       shift, and go to state 19
    WHILE      shift, and go to state 20
    LCORCHETE  shift, and go to state 21
    IF         shift, and go to state 23
    DO         shift, and go to state 24
    RETURN     shift, and go to state 25
    ID         shift, and go to state 26

    statement  go to state 44


State 25

   20 statement: RETURN • expression SEMICOLON
   33          | RETURN • error

    error    shift, and go to state 45
    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 51


State 26

   13 statement: ID • ASSIGNOP expression SEMICOLON
   21          | ID • ASSIGNOP error

    ASSIGNOP  shift, and go to state 52


State 27

   11 statement_list: statement_list statement •

    $default  reduce using rule 11 (statement_list)


State 28

    4 declarations: declarations VAR error SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 29

   10 identifier: ID ASSIGNOP • expression

    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 53


State 30

    2 declarations: declarations VAR identifier_list SEMICOLON •

    $default  reduce using rule 2 (declarations)


State 31

    8 identifier_list: identifier_list COMMA • identifier

    ID  shift, and go to state 12

    identifier  go to state 54


State 32

    3 declarations: declarations CONST error SEMICOLON •

    $default  reduce using rule 3 (declarations)


State 33

    5 declarations: declarations CONST identifier_list SEMICOLON •

    $default  reduce using rule 5 (declarations)


State 34

   34 statement: error SEMICOLON •

    $default  reduce using rule 34 (statement)


State 35

   22 statement: PRINT error • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 36

   19 statement: PRINT LPAREN • print_list RPAREN SEMICOLON
   23          | PRINT LPAREN • print_list RPAREN error
   24          | PRINT LPAREN • error RPAREN SEMICOLON

    error    shift, and go to state 56
    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    STRING   shift, and go to state 57
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    print_list  go to state 58
    print_item  go to state 59
    expression  go to state 60


State 37

   25 statement: READ error • SEMICOLON

    SEMICOLON  shift, and go to state 61


State 38

   26 statement: READ LPAREN • read_list RPAREN error
   27          | READ LPAREN • error RPAREN SEMICOLON
   35          | READ LPAREN • read_list RPAREN SEMICOLON

    error  shift, and go to state 62
    ID     shift, and go to state 63

    read_list  go to state 64


State 39

   29 statement: WHILE error • SEMICOLON

    SEMICOLON  shift, and go to state 65


State 40

   17 statement: WHILE LPAREN • expression RPAREN statement
   28          | WHILE LPAREN • error RPAREN

    error    shift, and go to state 66
    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 67


State 41

   11 statement_list: statement_list • statement
   14 statement: LCORCHETE statement_list • RCORCHETE

    error      shift, and go to state 17
    PRINT      shift, and go to state 18
    READ       shift, and go to state 19
    WHILE      shift, and go to state 20
    LCORCHETE  shift, and go to state 21
    RCORCHETE  shift, and go to state 68
    IF         shift, and go to state 23
    DO         shift, and go to state 24
    RETURN     shift, and go to state 25
    ID         shift, and go to state 26

    statement  go to state 27


State 42

   32 statement: IF error • SEMICOLON

    SEMICOLON  shift, and go to state 69


State 43

   15 statement: IF LPAREN • expression RPAREN statement
   16          | IF LPAREN • expression RPAREN statement ELSE statement
   31          | IF LPAREN • error RPAREN

    error    shift, and go to state 70
    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 71


State 44

   18 statement: DO statement • WHILE LPAREN expression RPAREN
   30          | DO statement • WHILE LPAREN error RPAREN

    WHILE  shift, and go to state 72


State 45

   33 statement: RETURN error •

    $default  reduce using rule 33 (statement)


State 46

   56 expression: LPAREN • expression RPAREN

    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 73


State 47

   58 expression: NUM •

    $default  reduce using rule 58 (expression)


State 48

   57 expression: ID •

    $default  reduce using rule 57 (expression)


State 49

   54 expression: UNOT • expression

    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 74


State 50

   55 expression: MINUSOP • expression

    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 75


State 51

   20 statement: RETURN expression • SEMICOLON
   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression

    SEMICOLON  shift, and go to state 76
    OR         shift, and go to state 77
    AND        shift, and go to state 78
    GTOP       shift, and go to state 79
    LTOP       shift, and go to state 80
    GTEOP      shift, and go to state 81
    LTEOP      shift, and go to state 82
    EQOP       shift, and go to state 83
    NOTEQOP    shift, and go to state 84
    PLUSOP     shift, and go to state 85
    MINUSOP    shift, and go to state 86
    MULTOP     shift, and go to state 87
    DIVOP      shift, and go to state 88


State 52

   13 statement: ID ASSIGNOP • expression SEMICOLON
   21          | ID ASSIGNOP • error

    error    shift, and go to state 89
    LPAREN   shift, and go to state 46
    NUM      shift, and go to state 47
    ID       shift, and go to state 48
    UNOT     shift, and go to state 49
    MINUSOP  shift, and go to state 50

    expression  go to state 90


State 53

   10 identifier: ID ASSIGNOP expression •
   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression

    OR       shift, and go to state 77
    AND      shift, and go to state 78
    GTOP     shift, and go to state 79
    LTOP     shift, and go to state 80
    GTEOP    shift, and go to state 81
    LTEOP    shift, and go to state 82
    EQOP     shift, and go to state 83
    NOTEQOP  shift, and go to state 84
    PLUSOP   shift, and go to state 85
    MINUSOP  shift, and go to state 86
    MULTOP   shift, and go to state 87
    DIVOP    shift, and go to state 88

    $default  reduce using rule 10 (identifier)


State 54

    8 identifier_list: identifier_list COMMA identifier •

    $default  reduce using rule 8 (identifier_list)


State 55

   22 statement: PRINT error SEMICOLON •

    $default  reduce using rule 22 (statement)


State 56

   24 statement: PRINT LPAREN error • RPAREN SEMICOLON

    RPAREN  shift, and go to state 91


State 57

   39 print_item: STRING •

    $default  reduce using rule 39 (print_item)


State 58

   19 statement: PRINT LPAREN print_list • RPAREN SEMICOLON
   23          | PRINT LPAREN print_list • RPAREN error
   37 print_list: print_list • COMMA print_item

    COMMA   shift, and go to state 92
    RPAREN  shift, and go to state 93


State 59

   36 print_list: print_item •

    $default  reduce using rule 36 (print_list)


State 60

   38 print_item: expression •
   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression

    OR       shift, and go to state 77
    AND      shift, and go to state 78
    GTOP     shift, and go to state 79
    LTOP     shift, and go to state 80
    GTEOP    shift, and go to state 81
    LTEOP    shift, and go to state 82
    EQOP     shift, and go to state 83
    NOTEQOP  shift, and go to state 84
    PLUSOP   shift, and go to state 85
    MINUSOP  shift, and go to state 86
    MULTOP   shift, and go to state 87
    DIVOP    shift, and go to state 88

    $default  reduce using rule 38 (print_item)


State 61

   25 statement: READ error SEMICOLON •

    $default  reduce using rule 25 (statement)


State 62

   27 statement: READ LPAREN error • RPAREN SEMICOLON

    RPAREN  shift, and go to state 94


State 63

   40 read_list: ID •

    $default  reduce using rule 40 (read_list)


State 64

   26 statement: READ LPAREN read_list • RPAREN error
   35          | READ LPAREN read_list • RPAREN SEMICOLON
   41 read_list: read_list • COMMA ID

    COMMA   shift, and go to state 95
    RPAREN  shift, and go to state 96


State 65

   29 statement: WHILE error SEMICOLON •

    $default  reduce using rule 29 (statement)


State 66

   28 statement: WHILE LPAREN error • RPAREN

    RPAREN  shift, and go to state 97


State 67

   17 statement: WHILE LPAREN expression • RPAREN statement
   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression

    RPAREN   shift, and go to state 98
    OR       shift, and go to state 77
    AND      shift, and go to state 78
    GTOP     shift, and go to state 79
    LTOP     shift, and go to state 80
    GTEOP    shift, and go to state 81
    LTEOP    shift, and go to state 82
    EQOP     shift, and go to state 83
    NOTEQOP  shift, and go to state 84
    PLUSOP   shift, and go to state 85
    MINUSOP  shift, and go to state 86
    MULTOP   shift, and go to state 87
    DIVOP    shift, and go to state 88


State 68

   14 statement: LCORCHETE statement_list RCORCHETE •

    $default  reduce using rule 14 (statement)


State 69

   32 statement: IF error SEMICOLON •

    $default  reduce using rule 32 (statement)


State 70

   31 statement: IF LPAREN error • RPAREN

    RPAREN  shift, and go to state 99


State 71

   15 statement: IF LPAREN expression • RPAREN statement
   16          | IF LPAREN expression • RPAREN statement ELSE statement
   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression

    RPAREN   shift, and go to state 100
    OR       shift, and go to state 77
    AND      shift, and go to state 78
    GTOP     shift, and go to state 79
    LTOP     shift, and go to state 80
    GTEOP    shift, and go to state 81
    LTEOP    shift, and go to state 82
    EQOP     shift, and go to state 83
    NOTEQOP  shift, and go to state 84
    PLUSOP   shift, and go to state 85
    MINUSOP  shift, and go to state 86
    MULTOP   shift, and go to state 87
    DIVOP    shift, and go to state 88


State 72

   18 statement: DO statement WHILE • LPAREN expression RPAREN
   30          | DO statement WHILE • LPAREN error RPAREN

    LPAREN  shift, and go to state 101


State 73

   42 expression: expression • PLUSOP expression
   43           | expression • MINUSOP expression
   44           | expression • MULTOP expression
   45           | expression • DIVOP expression
   46           | expression • LTOP expression
   47           | expression • GTOP expression
   48           | expression • GTEOP expression
   49           | expression • LTEOP expression
   50           | expression • EQOP expression
   51           | expression • NOTEQOP expression
   52           | expression • AND expression
   53           | expression • OR expression
   56           | LPAREN expression • RPAREN

    RPAREN   shift, and go to state 102
    OR       shift, and go to state 77
    AND      shift, and go to state 78
    GTOP     shift, and go to state 79
    LTOP     shift, and go to state 80
    GTEOP    shift, and go to state 81
    LTEOP    shift, and go to state 82
    EQOP     shift, and go to state 83
    NOTEQOP  shift, and go to state 84
    PLUSOP   shift, and go to state 85
    MINUSOP  shift, and go to state 86
    MULTOP   shift, and go to state 87
    DIVOP    shift, and go to state 88


State 74
